--- a/service_support.html
+++ b/service_support.html
@@ -25,7 +25,7 @@
     <!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+            <img src="http://storage.ie6countdown.com/assets/100images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
         </a>
     </div>
     <![endif]-->
@@ -136,23 +136,23 @@
                         </tr>
                         <tr>
                             <td>Разовое изменение контента (изменить телефон, адрес и т. п.)</td>
-                            <td width="15%" align="right"><span class="big-size-font">500</span></td>
+                            <td width="15%" align="right"><span class="big-size-font">100 000</span></td>
                         </tr>
                         <tr bgcolor="#eeeeee">
                             <td>Текст 1 страница (A4, Times New Roman, 12 кегль)</td>
-                            <td align="right"><span class="big-size-font">500</span></td>
+                            <td align="right"><span class="big-size-font">100 000</span></td>
                         </tr>
                         <tr>
                             <td>Веб оптимизация изображения / фотографии (1 изображение)</td>
-                            <td align="right"><span class="big-size-font">250</span></td>
+                            <td align="right"><span class="big-size-font">50 000</span></td>
                         </tr>
                         <tr bgcolor="#eeeeee">
                             <td>Таблица (1 штука, до 10 строк)</td>
-                            <td align="right"><span class="big-size-font">500</span></td>
+                            <td align="right"><span class="big-size-font">100 000</span></td>
                         </tr>
                         <tr>
                             <td>Простая форма (до 5 полей)</td>
-                            <td align="right"><span class="big-size-font">700</span></td>
+                            <td align="right"><span class="big-size-font">120 000</span></td>
                         </tr>
                         <tr>
                             <th align="left">Программирование</th>
@@ -160,19 +160,19 @@
                         </tr>
                         <tr>
                             <td>Гостевая книга</td>
-                            <td width="15%" align="right"><span class="big-size-font">3 000</span></td>
+                            <td width="15%" align="right"><span class="big-size-font">750 000</span></td>
                         </tr>
                         <tr bgcolor="#eeeeee">
                             <td>Форум</td>
-                            <td align="right"><span class="big-size-font">5 000</span></td>
+                            <td align="right"><span class="big-size-font">1 200 000</span></td>
                         </tr>
                         <tr>
                             <td>Голосование</td>
-                            <td align="right"><span class="big-size-font">3 000</span></td>
+                            <td align="right"><span class="big-size-font">750 000</span></td>
                         </tr>
                         <tr bgcolor="#eeeeee">
                             <td>Форма для отправки на e-mail</td>
-                            <td align="right"><span class="big-size-font">1 000</span></td>
+                            <td align="right"><span class="big-size-font">150 000</span></td>
                         </tr>
                         <tr>
                             <td>Индивидуальные программные решения</td>
@@ -184,53 +184,175 @@
                         </tr>
                         <tr>
                             <td>Перенос стандартного веб-сайта</td>
-                            <td width="15%" align="right"><span class="big-size-font">2 000</span></td>
+                            <td width="15%" align="right"><span class="big-size-font">520 000</span></td>
                         </tr>
                         <tr bgcolor="#eeeeee">
                             <td>Перенос веб-сайта, базы данных и скриптов</td>
-                            <td align="right"><span class="big-size-font">4 000</span></td>
+                            <td align="right"><span class="big-size-font">950 000</span></td>
                         </tr>
                         <tr>
                             <td>Перенос веб-сайта построенного на CMS </td>
-                            <td align="right"><span class="big-size-font">8 000</span></td>
+                            <td align="right"><span class="big-size-font">1 500 000</span></td>
                         </tr>
-                        <tr>
-                            <th align="left">Дизайн</th>
-                            <th align="right" nowrap="nowrap">Стоимость/руб.</th>
-                        </tr>
-                        <tr>
-                            <td>Разработка индивидуального шаблона сайта на основе фирменного стиля заказчика</td>
-                            <td width="15%" align="right"><span class="big-size-font">10 000</span></td>
-                        </tr>
-                        <tr bgcolor="#eeeeee">
-                            <td>Разработка логотипа компании (3 варианта)</td>
-                            <td width="15%" align="right"><span class="big-size-font">5 000</span></td>
-                        </tr>
-                        <tr>
-                            <td>Адаптация изображений для интернет (1 штука)</td>
-                            <td align="right"><span class="big-size-font">250</span></td>
-                        </tr>
-                        <tr bgcolor="#eeeeee">
-                            <td>Сканирование и обработка изображения (1 штука)</td>
-                            <td align="right"><span class="big-size-font">250</span></td>
-                        </tr>
-                        <tr>
-                            <td>Фотосъемка (1 час)</td>
-                            <td align="right"><span class="big-size-font">2 000</span></td>
-                        </tr>
-                        <tr bgcolor="#eeeeee">
-                            <td>Статичный баннер (JPG, GIF, PNG)</td>
-                            <td align="right"><span class="big-size-font">300</span></td>
-                        </tr>
-                        <tr>
-                            <td>Анимационный баннер (GIF)</td>
-                            <td align="right"><span class="big-size-font">600</span></td>
-                        </tr>
+
                         </tbody>
                     </table>
 
                     <!--</div>-->
                     <!--</div>-->
+                    <h3 >Тарифы на ежемесячную поддержку сайта</h3>
+                    <table class="tarif-table" border="0" cellpadding="0" cellspacing="0" width="100%">
+                        <tbody>
+                        <tr>
+
+                            <th width="46%" align="left" valign="top">
+                                <div class="calculator-button" >
+                                   <!--<img src="images/calculator.png" alt="поддержка сайтов - тарифный калькулятор" /> -->
+
+                                </div>
+                                <!--<div id="show-calc"><img style="margin:0px;cursor:pointer" src="images/sp-tar-calc.png" alt="поддержка сайтов - тарифный калькулятор" /></div>-->
+                            </th>
+                            <th width="18%"><div class="box green">БАЗОВЫЙ</div></th>
+                            <th width="18%"><div class="box blue">ОСНОВНОЙ</div></th>
+                            <th width="18%"><div class="box red">БИЗНЕС</div></th>
+                        </tr>
+                        <tr>
+                            <td class="caption"><div class="big-size-font"><strong>ТЕХНИЧЕСКАЯ ПОДДЕРЖКА САЙТА</strong></div></td>
+                            <td><div class="cash">5 000 <span class="small-font">руб./мес.</span></div></td>
+                            <td><div class="cash">10 000 <span class="small-font">руб./мес.</span></div></td>
+                            <td><div class="cash">20 000 <span class="small-font">руб./мес.</span></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Консультации по вопросам работы сайта</td>
+                            <td><div class="white">c 10:00 до 19:00</div></td>
+                            <td><div class="white">c 10:00 до 19:00</div></td>
+                            <td><div class="white">c 10:00 до 23:00</div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Контроль за работоспособностью сайта</td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Оперативное устранение ошибок и технических сбоев</td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Резервное копирование сайта и базы данных</td>
+                            <td><div class="grey">1 раз в месяц</div></td>
+                            <td><div class="grey">1 раз в 2 недели</div></td>
+                            <td><div class="grey">1 раз в неделю</div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Управление почтовым сервисом, помощь в настройке</td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Диагностика и удаление вредоносных программ</td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Контроль срока делегирования домена и оплаты хостинга</td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Хранение всей необходимой технической информации</td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Контакт с хостинг-провайдером от имени владельца сайта</td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td class="caption"><div class="big-size-font"><strong>ИНФОРМАЦИОННАЯ ПОДДЕРЖКА САЙТА</strong></div></td>
+                            <td class="caption"></td>
+                            <td class="caption"></td>
+                            <td class="caption"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Верстка и размещение текстовой информации (A4, 12 кегль)</td>
+                            <td><div class="white">до 10 страниц</div></td>
+                            <td><div class="white">до 20 страниц</div></td>
+                            <td><div class="white"><img alt="" src="images/boundless.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Размещение и оптимизация графических изображений</td>
+                            <td><div class="grey">до 10 штук</div></td>
+                            <td><div class="grey">до 20 штук</div></td>
+                            <td><div class="grey"><img alt="" src="images/boundless.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Изменение функциональных возможностей сайта</td>
+                            <td><div class="white"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Добавление и изменение разделов сайта</td>
+                            <td><div class="grey"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Изменение графических элементов дизайна сайта</td>
+                            <td><div class="white"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Разработка и размещение баннеров</td>
+                            <td><div class="grey"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="grey">GIF, JPG</div></td>
+                            <td><div class="grey">GIF, JPG, SWF</div></td>
+                        </tr>
+                        <tr>
+                            <td class="caption"><div class="big-size-font"><strong>УРОВЕНЬ СЕРВИСА</strong></div></td>
+                            <td class="caption"></td>
+                            <td class="caption"></td>
+                            <td class="caption"></td>
+
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Время реакции на обращение</td>
+                            <td><div class="white">до 2 дней</div></td>
+                            <td><div class="white">1 день</div></td>
+                            <td><div class="white">4 часа</div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Выезд к заказчику в пределах МКАД</td>
+                            <td><div class="grey"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Установка онлайн консультанта (без абонентской платы)</td>
+                            <td><div class="grey"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="grey"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+                        <tr>
+                            <td style="border-bottom:1px dashed #e9e9e9;">Мониторинг посещаемости сайта и предоставление отчета</td>
+                            <td><div class="white"><img alt="" src="images/red_marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                            <td><div class="white"><img alt="" src="images/marker_list.png"></div></td>
+                        </tr>
+
+                        </tbody>
+                    </table>
                 </section>
             </div>
         </div>
