доработаны страницы сервиса и почти вся адаптивная верстка

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Lime Media</title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
-<!--<link rel="icon" href="images/favicon.ico">-->
-<!--<link rel="shortcut icon" href="images/favicon.ico" />-->
+<link rel="icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="images/favicon.ico" />
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery.js"></script>
 <script src="js/jquery-migrate-1.1.1.js"></script>
@@ -85,19 +85,19 @@
     <div class="container">
       <div class="row">
         <div class="grid_4">
-          <a href="#" class="banner "><div class="maxheight">
+          <a href="promoutions.html" class="banner "><div class="maxheight">
             <div class="fa fa-line-chart"></div>Продвижение</div>
           </a>
-          <a href="#" class="banner "><div class="maxheight">
+          <a href="service_develop.html" class="banner "><div class="maxheight">
             <div class="fa fa-wrench"></div>Разработка</div>
           </a>
-          <a href="#" class="banner "><div class="maxheight1">
+          <a href="service_support.html" class="banner "><div class="maxheight1">
             <div class="fa fa-cogs"></div>Поддержка</div>
           </a>
-          <a href="#" class="banner "><div class="maxheight1">
+          <a href="service_reclame.html" class="banner "><div class="maxheight1">
             <div class="fa fa-money"></div>Реклама</div>
           </a>
-            <a href="#" class="banner "><div class="maxheight1">
+            <a href="service_design.html" class="banner "><div class="maxheight1">
                 <div class="fa fa-paint-brush"></div>Дизайн</div>
             </a>
 
@@ -202,11 +202,11 @@
       <div class="grid_4">
         <h4>Услуги:</h4>
         <ul class="list-1">
-          <li><a href="#">Продвижение</a></li>
-          <li><a href="#">Разработка</a></li>
-          <li><a href="#">Поддержка</a></li>
-          <li><a href="#">Реклама</a></li>
-          <li><a href="#">Дизайн</a></li>
+          <li><a href="promoutions.html">Продвижение</a></li>
+          <li><a href="service_develop.html">Разработка</a></li>
+          <li><a href="service_support.html">Поддержка</a></li>
+          <li><a href="service_reclame.html">Реклама</a></li>
+          <li><a href="service_design.html">Дизайн</a></li>
           <!--<li><a href="#">Jalesuadaorem ipsum dolor sit ame</a></li>-->
         </ul>
       </div>
