--- a/service_reclame.html
+++ b/service_reclame.html
@@ -4,8 +4,8 @@
     <title>Lime Media</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
-    <!--<link rel="icon" href="images/favicon.ico">-->
-    <!--<link rel="shortcut icon" href="images/favicon.ico" />-->
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.1.1.js"></script>
@@ -119,23 +119,28 @@
                     <div class="row">
                     <div class="grid_11">
                     <div class="grid_3 service_item_reclame">
+                        <img src="images/reclame_tv.jpg" alt="реклама на тв"/>
                     <h3>Реклама на ТВ</h3>
                     <p>Реклама на ТВ – некогда один из наиболее массовых и действенных типов рекламы, до сих пор сохранивший некоторое влияние на умы массовых потребителей. Несмотря на развитие интернета, количество активных телезрителей все еще уменьшается достаточно медленно. Поэтому немалая актуальность телевизионной рекламы сохраняется до сих пор. Компания LimeMedia предлагает полный спектр создания телерекламы – от разработки первоначальной концепции до создания графика размещения.</p></div>
-                   <div class="grid_3  service_item_reclame"> <h3>Пресса</h3>
-                    <p>Пресса – еще одна традиционная площадка для размещения рекламного материала. Яркие и привлекательные объявления в популярных газетах и модных журналах по-прежнему создают интерес к той или иной торговой марке, популярной продукции или промоакции. LimeMedia имеет немалый опыт в создании печатной рекламы и может предложить свои квалифицированные услуги в этой области. Мы можем придумать и создать макет рекламного объявления, продумать где лучше его разместить и договориться с владельцами издания.</p></div>
-                   <div class="grid_3 service_item_reclame"> <h3>Общественный транспорт</h3>
-                    <p>Общественный транспорт – сравнительно новая площадка для промоушена, однако она уже успела зарекомендовать себя как наиболее экономичный способ обратиться к широкой аудитории. Размещенную в трамваях, троллейбусах и автобусах рекламу видят сотни людей ежедневно – это отличный метод рассказать о себе общественности. Компания LimeMedia предлагает услуги по созданию и размещению рекламного материала в салонах столичного общественного транспорта по вполне приемлемым ценам.</p></div></div></div>
+                   <div class="grid_3  service_item_reclame"> <img src="images/reclame_smi.jpg" alt="реклама в газетах и журналах"/> <h3>Пресса</h3>
+
+                    <p >Пресса – еще одна традиционная площадка для размещения рекламного материала. Яркие и привлекательные объявления в популярных газетах и модных журналах по-прежнему создают интерес к той или иной торговой марке, популярной продукции или промоакции. LimeMedia может предложить свои квалифицированные услуги в этой области. Мы можем придумать и создать макет рекламного объявления, продумать где лучше его разместить и договориться с владельцами издания.</p></div>
+                   <div class="grid_3 service_item_reclame"><img src="images/reclame_transport.jpg" alt="реклама в общественном транспорте"/> <h3>Общественный транспорт</h3>
+                    <p>Общественный транспорт – сравнительно новая площадка для промоушена, однако она уже успела зарекомендовать себя как наиболее экономичный способ обратиться к широкой аудитории. Размещенную в трамваях, троллейбусах и автобусах рекламу видят сотни людей ежедневно – это отличный метод рассказать о себе общественности. Компания LimeMedia предлагает услуги по созданию и размещению рекламного материала в салонах столичного общественного транспорта.</p></div></div></div>
                     <div class="row">
                         <div class="grid_11">
                             <div class="grid_3 service_item_reclame">
+                                <img src="images/reclame_metro.jpg" alt="реклама в метро"/>
                                 <h3>Метро</h3>
                                 <p>Метро – практически самый популярный вид транспорта во всех больших городах. Ежедневный поток людей там в буквальном смысле исчисляется тысячам. И все эти тысячи могут увидеть вашу рекламу, воспользоваться вашим акционным предложением. Все, что вам для этого нужно – воспользоваться услугами компании LimeMedia по разработке и внедрению рекламы в Минском метрополитене.</p>
                             </div>
                             <div class="grid_3 service_item_reclame">
+                                <img src="images/reclame_internet.jpg" alt="реклама в интернете"/>
                                 <h3>Интернет</h3>
-                                <p>Интернет – самое объемное вместилище рекламы самого разного формата и содержания. На сегодняшний день существует великое множество разнообразных техник и технологий для увеличения и оптимизации своего присутствия на просторах бесконечной всемирной сети. LimeMedia в совершенстве владеет множеством инструментов для эффективной раскрутки бизнеса в сети. Контекстная реклама и поисковая оптимизация, SEO и SMM, аудит и ретаргетинг – все это поможет вам значительно увеличить приток клиентов за счет правильной рекламы в интернете.</p>
+                                <p>Интернет – самое объемное вместилище рекламы самого разного формата и содержания. На сегодняшний день существует великое множество разнообразных техник и технологий для увеличения и оптимизации своего присутствия на просторах бесконечной всемирной сети. LimeMedia в совершенстве владеет множеством инструментов для эффективной раскрутки бизнеса в сети.</p>
                             </div>
                             <div class="grid_3 service_item_reclame">
+                                <img src="images/reclame_radio.jpg" alt="реклама на радио"/>
                                 <h3>Радио</h3>
                                 <p>Радио – незаслуженно забытый сегодня источник информации. И пусть его голос нынче звучит уже отнюдь не в каждом доме, но у водителей и дальнобойщиков оно до сих пор в большом почете. Поэтому если вам нужно донести свое сообщение именно до этой, отнюдь не такой уж и маленькой аудитории, то реклама на радио как нельзя лучше подойдет для этого. Наша компания готова предложит вам и такие услуги.</p>
                             </div>
@@ -144,12 +149,14 @@
                     <div class="row">
                         <div class="grid_11">
                             <div class="grid_3 service_item_reclame">
+                                <img src="images/reclame_lift.jpg" alt="реклама в лифтах"/>
                                 <h3>Лифты</h3>
-                                <p>Лифты – помещения, где большая часть жителей мегаполисов проводит значительную часть своего времени. Поэтому не воспользоваться такой несомненно удобной и сравнительно простой площадкйо для размещения своего объявления – непростительная роскошь для любого, кто хочет быстрой, экономичной и эффективной рекламы. LimeMedia занимается размещением рекламы в городских лифтах уже довольно продолжительное время и может ответственно заявить о ее действенности.</p>
+                                <p>Лифты – помещения, где большая часть жителей мегаполисов проводит значительную часть своего времени. Поэтому не воспользоваться такой несомненно удобной и сравнительно простой площадкйо для размещения своего объявления – непростительная роскошь для любого, кто хочет быстрой, экономичной и эффективной рекламы. LimeMedia занимается размещением рекламы в городских лифтах уже довольно продолжительное время.</p>
                             </div>
                             <div class="grid_3 service_item_reclame">
+                                <img src="images/reclame_out.jpg" alt="Наружная реклама"/>
                                 <h3>Наружная реклама</h3>
-                                <p>8.	Наружная реклама – не самый экономичный, но определенно один из самых действенных методов заявить о себе. Баннеры, растяжки, бигборды и роллапы – вот лишь некоторые из инструментов, которыми владеет компания LimeMedia для создания эффективной рекламы за пределами Всемирной Сети. Бюджет такой акции может разниться от случая к случаю, ведь наружная реклама - вещь во всех смыслах растяжимая.</p>
+                                <p>Наружная реклама – не самый экономичный, но определенно один из самых действенных методов заявить о себе. Баннеры, растяжки, бигборды и роллапы – вот лишь некоторые из инструментов, которыми владеет компания LimeMedia для создания эффективной рекламы за пределами Всемирной Сети. Бюджет такой акции может разниться от случая к случаю, ведь наружная реклама - вещь во всех смыслах растяжимая.</p>
                             </div>
                             <div class="grid_3">
                                 <div class=" button_services"><a href="#">заказать услугу</a></div>
