--- a/service_support.html
+++ b/service_support.html
@@ -4,8 +4,8 @@
     <title>Lime Media</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
-    <!--<link rel="icon" href="images/favicon.ico">-->
-    <!--<link rel="shortcut icon" href="images/favicon.ico" />-->
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.1.1.js"></script>
@@ -123,7 +123,7 @@
                     </div>
                     <h3>Копирайтинг</h3>
                     <p>Копирайтинг – это то, без чего не обходиться ни один современный вебсайт. Имидж всего ресурса во многом зависит от размещенной на нем информации. Чем она более интересная, уникальная и актуальная, тем больше целевых посетителей привлечет сайт. А каждый заинтересованный посетитель сайта – это, как известно, потенциальный клиент бизнеса. Понимая важность этого, копирайтеры компании LimeMedia создают только самый качественный и «работающий» контент для сайтов любой тематики.</p>
-                    <div class="review_block "> <strong>от 110 000 за 1000 символов</strong></div>
+                    <div class="review_block price_block_other "> <strong>от 110 000 за 1000 символов</strong></div>
                     <h3>Администрирование</h3>
                     <p>Администрирование – одна из самых важных составляющих грамотной технической поддержки любого современного сетевого ресурса. Прошло то время, когда сайты были постоянными и статичными. Сегодня посетители хотят видеть постоянные изменения, обновления, появление новых функций и оперативное исправление былых недочетов. Для этого в штате компании LimeMedia есть специально обученные профессионалы, которые могут смело взять на себя администрирование и техническую поддержку вебсайтов, построенных на большинстве современных платформ.</p>
                     <h3>Стоимость разовой поддержки сайта</h3>
@@ -218,9 +218,9 @@
                         </tr>
                         <tr>
                             <td class="caption"><div class="big-size-font"><strong>ТЕХНИЧЕСКАЯ ПОДДЕРЖКА САЙТА</strong></div></td>
-                            <td><div class="cash">5 000 <span class="small-font">руб./мес.</span></div></td>
-                            <td><div class="cash">10 000 <span class="small-font">руб./мес.</span></div></td>
-                            <td><div class="cash">20 000 <span class="small-font">руб./мес.</span></div></td>
+                            <td><div class="cash">1 500 000 <span class="small-font">руб.</span></div></td>
+                            <td><div class="cash">3 000 000 <span class="small-font">руб.</span></div></td>
+                            <td><div class="cash">4 500 000 <span class="small-font">руб.</span></div></td>
                         </tr>
                         <tr>
                             <td style="border-bottom:1px dashed #e9e9e9;">Консультации по вопросам работы сайта</td>
@@ -353,6 +353,7 @@
 
                         </tbody>
                     </table>
+                    <div class=" button_services"><a href="#">заказать услугу</a></div>
                 </section>
             </div>
         </div>
