--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@
             <!--<div class="grid_2 image_services">-->
                 <!--<img src="images/promoution.png">-->
             <!--</div>-->
-            <a href="serviсe_promoution.html" class="service_link"><div class="maxheight">
+            <a href="promoutions.html" class="service_link"><div class="maxheight">
                 <div class="fa fa-line-chart"></div>Продвижение</div>
             </a>
             <!--<div class="grid_2 image_services_hide">-->
@@ -190,7 +190,7 @@
             <!--<div class="grid_2 image_services">-->
                 <!--<img src="images/marketing.png">-->
             <!--</div>-->
-            <a href="#" class="service_link "><div class="maxheight1">
+            <a href="service_reclame.html" class="service_link "><div class="maxheight1">
                 <div class="fa fa-money"></div>Реклама</div>
             </a>
             <!--<div class="grid_2 image_services_hide">-->
@@ -216,7 +216,7 @@
             <!--<div class="grid_2 image_services">-->
                 <!--<img src="images/design.png">-->
             <!--</div>-->
-            <a href="#" class="service_link "><div class="maxheight1">
+            <a href="service_design.html" class="service_link "><div class="maxheight1">
                 <div class="fa fa-paint-brush"></div>Дизайн</div>
             </a>
             <div class="grid_2 text_services">
