responsive design all pages

--- a/service_support.html
+++ b/service_support.html
@@ -201,6 +201,76 @@
                     <!--</div>-->
                     <!--</div>-->
                     <h3 >Тарифы на ежемесячную поддержку сайта</h3>
+                    <div class="tarif_table_hide">
+                        <div class="row review_block">
+                            <div class="grid_4 reset_align">
+                                <div class="image_content">Базовый</div>
+                            </div>
+                            <div class="grid_4 block_about">
+                                <ul>
+                                    <li> - Контроль за работоспособностью сайта</li>
+                                    <li> - Оперативное устранение ошибок и технических сбоев</li>
+                                    <li> - Управление почтовым сервисом, помощь в настройке</li>
+                                    <li> - Диагностика и удаление вредоносных программ</li>
+                                    <li> - Контроль срока делегирования домена и оплаты хостинга</li>
+                                    <li> - Хранение всей необходимой технической информации</li>
+                                    <li> - Контакт с хостинг-провайдером от имени владельца сайта</li>
+                                </ul>
+                            </div>
+                        <div class="grid_2 price_block">
+                            <strong>1 500 000 бел.руб</strong>
+                        </div>
+                        </div>
+                        <div class="row review_block">
+                            <div class="grid_4 reset_align">
+                                <div class="image_content">Основной</div>
+                            </div>
+                            <div class="grid_4 block_about">
+                                <ul>
+                                    <li> - Контроль за работоспособностью сайта</li>
+                                    <li> - Оперативное устранение ошибок и технических сбоев</li>
+                                    <li> - Управление почтовым сервисом, помощь в настройке</li>
+                                    <li> - Диагностика и удаление вредоносных программ</li>
+                                    <li> - Контроль срока делегирования домена и оплаты хостинга</li>
+                                    <li> - Хранение всей необходимой технической информации</li>
+                                    <li> - Контакт с хостинг-провайдером от имени владельца сайта</li>
+                                    <li> - Изменение функциональных возможностей сайта</li>
+                                    <li> - Добавление и изменение разделов сайта</li>
+                                    <li> - Изменение графических элементов дизайна сайта</li>
+                                    <li> - Установка онлайн консультанта (без абонентской платы)</li>
+                                    <li> - Мониторинг посещаемости сайта и предоставление отчета</li>
+                                </ul>
+                            </div>
+                            <div class="grid_2 price_block">
+                                <strong>3 000 000 бел.руб</strong>
+                            </div>
+                        </div>
+                        <div class="row review_block">
+                            <div class="grid_4 reset_align">
+                                <div class="image_content">Основной</div>
+                            </div>
+                            <div class="grid_4 block_about">
+                                <ul>
+                                    <li> - Контроль за работоспособностью сайта</li>
+                                    <li> - Оперативное устранение ошибок и технических сбоев</li>
+                                    <li> - Управление почтовым сервисом, помощь в настройке</li>
+                                    <li> - Диагностика и удаление вредоносных программ</li>
+                                    <li> - Контроль срока делегирования домена и оплаты хостинга</li>
+                                    <li> - Хранение всей необходимой технической информации</li>
+                                    <li> - Контакт с хостинг-провайдером от имени владельца сайта</li>
+                                    <li> - Изменение функциональных возможностей сайта</li>
+                                    <li> - Добавление и изменение разделов сайта</li>
+                                    <li> - Изменение графических элементов дизайна сайта</li>
+                                    <li> - Установка онлайн консультанта (без абонентской платы)</li>
+                                    <li> - Мониторинг посещаемости сайта и предоставление отчета</li>
+                                    <li> - Выезд к заказчику в пределах МКАД</li>
+                                </ul>
+                            </div>
+                            <div class="grid_2 price_block">
+                                <strong>4 500 000 бел.руб</strong>
+                            </div>
+                        </div>
+                    </div>
                     <table class="tarif-table" border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tbody>
                         <tr>
