--- a/about.html
+++ b/about.html
@@ -136,10 +136,7 @@
             <div class="count">1</div>
             <div class="extra_wrapper">
               <div class="text1"><a href="#">Индивидуально</a></div>
-                Если вас интересует создание сайтов
-                или их продвижение, если Вам
-                необходима хорошая интернет-реклама,
-                то обращайтесь именно к нам.
+               <p> Создаем уникальный проект для каждого!</p>
             </div>
           </div>
         </div>
@@ -148,10 +145,7 @@
             <div class="count">2</div>
             <div class="extra_wrapper">
               <div class="text1"><a href="#"> Надежно</a></div>
-                В вашем распоряжении всегда
-                выгодные цены, отменное качество
-                всех оказываемых услуг и гарантированно
-                великолепный результат.
+               <p> Мы дорожим доверием наших партнеров и всегда открыты к сотрудничеству.</p>
             </div>
           </div>
         </div>
@@ -160,10 +154,7 @@
             <div class="count">3</div>
             <div class="extra_wrapper">
               <div class="text1"><a href="#">Эффективно</a></div>
-                Для наиболее эффективного
-                и продуктивного выполнения задач клиентов,
-                мы пользуется самыми современными
-                  технологиями.
+               <p> Подбираем только "рабочие" каналы для реализации рекламной кампании.</p>
             </div>
           </div>
         </div>
